# nanochat.JAX

./: .gitignore  README.md  pyproject.toml
nanochat/: checkpoint_manager.py  common.py  core_eval.py  dataloader.py  engine.py  flash_attention.py  fp8.py  gpt.py  loss_eval.py  optim.py  report.py  tokenizer.py
runs/: provision_tpu.bat  provision_tpu.sh  speedrun_tpu.sh  tpu_smoke_test.sh
scripts/: base_eval.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  tok_train.py
tests/: test_attention_fallback.py  test_engine.py
