[project]
name = "nanochat"
version = "0.2.0"
description = "the minimal full-stack ChatGPT clone — JAX/TPU edition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.0.0",
    "fastapi>=0.115.0",
    "flax>=0.9.0",
    "jax[tpu]",
    "optax>=0.2.3",
    "orbax-checkpoint>=0.10.0",
    "psutil>=6.0.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.8.0",
    "tokenizers>=0.20.0",
    "uvicorn>=0.30.0",
    "wandb>=0.18.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.3",
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
default-groups = []

# jax[tpu] requires the libtpu wheel from Google's index
[tool.uv.sources]
jax = [
    { index = "google-jax-tpu" },
]

[[tool.uv.index]]
name = "google-jax-tpu"
url = "https://storage.googleapis.com/jax-releases/libtpu_releases.html"
explicit = true
